add drawer and tabs layout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,28 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
         android:id="@+id/baseview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/background_light"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/familynoteimage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
             android:layout_weight="1"
-            android:paddingTop="0dp"
             android:contentDescription="@string/app_name"
+            android:paddingTop="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/familynote2" />
+            app:srcCompat="@drawable/ic_familynote2" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,9 +44,9 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="40dp"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/userimage"
@@ -58,7 +59,7 @@
                     android:paddingTop="3dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/usericon" />
+                    app:srcCompat="@drawable/ic_user" />
 
                 <EditText
                     android:id="@+id/useremail"
@@ -71,8 +72,9 @@
                     android:ems="5"
                     android:hint="@string/example_email"
                     android:inputType="textEmailAddress"
-                    app:layout_constraintLeft_toRightOf="@id/userimage"
-                    app:layout_constraintBottom_toBottomOf="parent" />//>
+                    android:textColor="@android:color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/userimage" />//>
             </LinearLayout>
 
             <LinearLayout
@@ -96,7 +98,7 @@
                     android:paddingTop="0dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="parent"
-                    app:srcCompat="@drawable/lock" />
+                    app:srcCompat="@drawable/ic_lock" />
 
                 <EditText
                     android:id="@+id/password"
@@ -108,8 +110,8 @@
                     android:background="@drawable/edittext_border_round_corner"
                     android:ems="5"
                     android:inputType="textPassword"
-                    app:layout_constraintLeft_toRightOf="@id/lockimage"
-                    app:layout_constraintBottom_toBottomOf="parent" />>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/lockimage" />>
             </LinearLayout>
 
             <LinearLayout
@@ -153,8 +155,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="70dp"
                     android:text="Do not hava an account yet?"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    android:textColor="@android:color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent" />
 
                 <Button
                     android:id="@+id/register_button"
