--- a/app/src/main/res/layout/fragment_notepad.xml
+++ b/app/src/main/res/layout/fragment_notepad.xml
@@ -105,7 +105,7 @@
                 android:layout_marginLeft="250dp"
                 android:layout_marginTop="50dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/pencil" />
+                app:srcCompat="@drawable/ic_pencil" />
 
             <EditText
                 android:id="@+id/editText5"
