--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -25,7 +25,7 @@
             android:scaleType="center"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/noteimage" />
+            app:srcCompat="@drawable/ic_noteimage" />
 
         <LinearLayout
             android:layout_width="wrap_content"
