--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,18 +3,18 @@
 
         <item
             android:id="@+id/nav_noteboard"
-            android:icon="@drawable/boardnote"
+            android:icon="@drawable/ic_noteboard"
             android:title="@string/noteboard_name" />
         <item
             android:id="@+id/nav_notepad"
-            android:icon="@drawable/notepad"
+            android:icon="@drawable/ic_notepad"
             android:title="@string/notepad_name" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/settings"
+            android:icon="@drawable/ic_settings"
             android:title="@string/settings_name" />
         <item
             android:id="@+id/nav_logout"
-            android:icon="@drawable/familynote"
+            android:icon="@drawable/ic_familynote"
             android:title="@string/logout_name" />
 </menu>
