--- a/app/src/main/res/drawable/notebard_boarder.xml
+++ b/app/src/main/res/drawable/notebard_boarder.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <stroke
-    android:width="1dp"
-    android:color="#FF909090" />
+    android:width="3dp"
+    android:color="#171515" />
 <solid
     android:color="#00FFFFFF"
     android:paddingLeft="10dp"
