--- a/app/src/main/res/layout/fragment_noteboard.xml
+++ b/app/src/main/res/layout/fragment_noteboard.xml
@@ -52,14 +52,15 @@
                 android:text="Local search" />
         </RadioGroup>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="-30dp"
+            android:layout_marginBottom="38dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="17dp"
-            android:background="@drawable/noteboard_boarder"
+            android:background="@drawable/notebard_boarder"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -67,10 +68,7 @@
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent" />
-        </RelativeLayout>
+                android:layout_height="match_parent" />
+        </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
