--- a/app/src/main/res/layout/settings_section.xml
+++ b/app/src/main/res/layout/settings_section.xml
@@ -7,22 +7,24 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#D8D8D8"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/tvSectionTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
-            android:padding="10dp"
-            android:textSize="30sp"
+            android:padding="2dp"
             android:text="Section"
-            android:textStyle="bold" />
+            android:textColor="@android:color/black"
+            android:textSize="25sp" />
 
     </LinearLayout>
 
