--- a/app/src/main/res/layout/fragment_noteboard.xml
+++ b/app/src/main/res/layout/fragment_noteboard.xml
@@ -69,6 +69,7 @@
             app:layout_constraintTop_toBottomOf="@id/radiogroup">
 
             <ListView
+                android:id="@+id/notelist"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </LinearLayout>
