--- a/app/src/main/res/layout/fragment_notepad.xml
+++ b/app/src/main/res/layout/fragment_notepad.xml
@@ -32,23 +32,25 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.2"
-                android:text="From:"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:text="From:" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/sender"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginLeft="-20dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="-15dp"
                 android:layout_weight="0.8"
                 android:background="@drawable/edittext_border_round_corner"
                 android:ems="5"
-                android:inputType="textPersonName"
-                app:layout_constraintLeft_toRightOf="@id/textView13"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:inputType="textPersonName" />
+
+            <Spinner
+                android:id="@+id/fromlist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-70dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="-20dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -74,10 +76,10 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editText6"
+                android:id="@+id/receiver"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginLeft="-20dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="-15dp"
                 android:layout_weight="0.8"
                 android:background="@drawable/edittext_border_round_corner"
                 android:ems="5"
@@ -85,6 +87,14 @@
                 app:layout_constraintLeft_toRightOf="@id/textView14"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <Spinner
+                android:id="@+id/tolist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-70dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="-20dp" />
         </LinearLayout>
 
         <RelativeLayout
@@ -109,7 +119,7 @@
                 app:srcCompat="@drawable/ic_pencil" />
 
             <EditText
-                android:id="@+id/editText5"
+                android:id="@+id/notebody"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -137,7 +147,7 @@
             app:layout_constraintTop_toBottomOf="@id/input_layout">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
