--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -51,7 +51,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="From:" />
+                    android:text="From:"
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/sender"
@@ -60,6 +61,7 @@
                     android:layout_marginLeft="-30dp"
                     android:layout_weight="1"
                     android:text="kelci"
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
@@ -67,7 +69,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="To:" />
+                    android:text="To:"
+                    android:textColor="@android:color/black" />
 
                 <TextView
                     android:id="@+id/receiver"
@@ -76,6 +79,7 @@
                     android:layout_marginLeft="-50dp"
                     android:layout_weight="1"
                     android:text="alisa"
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -86,6 +90,7 @@
                 android:layout_marginRight="10dp"
                 android:ems="10"
                 android:text="111111233456878895ssssssssssssssssssssskkkkkkkkkkkkkkccccccccccccccccccc"
+                android:textColor="@android:color/black"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title_layout" />
@@ -98,6 +103,7 @@
                 android:ems="10"
                 android:gravity="right"
                 android:text="Name"
+                android:textColor="@android:color/black"
                 android:textStyle="italic|bold"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
