--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,6 @@
         android:id="@+id/baseview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_light"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -63,10 +62,9 @@
 
                 <EditText
                     android:id="@+id/useremail"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="-35dp"
-                    android:layout_marginRight="60dp"
+                    android:layout_marginRight="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/edittext_border_round_corner"
                     android:ems="5"
@@ -101,11 +99,10 @@
                     app:srcCompat="@drawable/ic_lock" />
 
                 <EditText
-                    android:id="@+id/password"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/password_text"
+                    android:layout_width="200dp"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="-35dp"
-                    android:layout_marginRight="60dp"
+                    android:layout_marginRight="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/edittext_border_round_corner"
                     android:ems="5"
