--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
                 app:layout_constraintRight_toRightOf="parent" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/email_address"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
@@ -73,7 +73,7 @@
                 app:layout_constraintRight_toRightOf="parent" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/enter_password"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
@@ -107,7 +107,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editText3"
+                android:id="@+id/reenter_password"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
@@ -131,7 +131,7 @@
             app:layout_constraintTop_toBottomOf="@id/reenter_password_layout">
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/register"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
