--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,11 +43,13 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/edittext_border_round_corner"
-                android:ems="5"
+                android:ems="7"
                 android:hint="Pls enter email here..."
                 android:inputType="textEmailAddress"
-                app:layout_constraintLeft_toRightOf="@id/enter_email_text"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                android:textSize="14sp"
+                android:typeface="sans"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/enter_email_text" />
 
         </LinearLayout>
 
@@ -78,11 +80,14 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/edittext_border_round_corner"
-                android:ems="5"
-                android:hint="At least 8 characters without special characters..."
+                android:ellipsize="end"
+                android:ems="7"
+                android:hint="At least 8 characters with no special characters..."
                 android:inputType="textPassword"
-                app:layout_constraintLeft_toRightOf="@id/enter_password_text"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                android:textSize="14sp"
+                android:typeface="sans"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/enter_password_text" />
         </LinearLayout>
 
         <LinearLayout
@@ -112,10 +117,12 @@
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/edittext_border_round_corner"
-                android:ems="5"
+                android:ems="7"
                 android:inputType="textPassword"
-                app:layout_constraintLeft_toRightOf="@id/re_enter_password_text"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                android:textSize="14sp"
+                android:typeface="sans"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/re_enter_password_text" />
 
         </LinearLayout>
 
