--- a/app/src/main/res/values/url_templates.xml
+++ b/app/src/main/res/values/url_templates.xml
@@ -5,10 +5,11 @@
     <string name = "server_url">http://192.168.1.177:4000/</string>
 
     <string name="login">%1$sauth/sign_in</string>
-    <string name="logout">%1$auth/sign_out?sessionid=%2$</string>
+    <string name="logout">%1$sauth/sign_out?sessionid=%2$s</string>
     <string name="register">%1$sauth/register</string>
-    <string name="add_family_member">%1$auth/familyMembers?sessionid=%2$</string>
-    <string name="submit_note">%1$notes/create?sessionid=%2$</string>
-    <string name="note_search">%1$notes/search?from=%2$&amp;to=%3$&amp;date=%4$&amp;sessionid=%5$</string>
+    <string name="add_family_member">%1$sauth/familyMembers?sessionid=%2$s</string>
+    <string name="submit_note">%1$snotes/create?sessionid=%2$</string>
+    <string name="note_search">%1$snotes/search?from=%2$s&amp;to=%3$s&amp;date=%4$s&amp;sessionid=%5$s</string>
+    <string name="get_token">%1$sauth/getToken?sessionid=%2$s</string>
 
 </resources>
