--- a/app/src/main/res/layout/fragment_notepad.xml
+++ b/app/src/main/res/layout/fragment_notepad.xml
@@ -39,6 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginLeft="-15dp"
+                android:layout_marginRight="2dp"
                 android:layout_weight="0.8"
                 android:background="@drawable/edittext_border_round_corner"
                 android:ems="5"
@@ -48,7 +49,7 @@
                 android:id="@+id/fromlist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-70dp"
+                android:layout_marginLeft="-100dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="-20dp" />
         </LinearLayout>
@@ -80,6 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginLeft="-15dp"
+                android:layout_marginRight="2dp"
                 android:layout_weight="0.8"
                 android:background="@drawable/edittext_border_round_corner"
                 android:ems="5"
@@ -92,7 +94,7 @@
                 android:id="@+id/tolist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="-70dp"
+                android:layout_marginLeft="-100dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="-20dp" />
         </LinearLayout>
