--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@android:style/TextAppearance.StatusBar.EventContent"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imagenotileft"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
         android:layout_alignBottom="@id/linear_layout"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_familynote"
         android:layout_alignWithParentIfMissing="false"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="15dp"
+        android:contentDescription="@string/app_name"
+        android:gravity="center_vertical"
+        android:src="@drawable/ic_familynote" />
 
 
     <LinearLayout
@@ -24,40 +26,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="false"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="1dp"
         android:layout_toRightOf="@+id/imagenotileft"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:layout_marginBottom="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Liveblock"
-                android:textSize="15dp"/>
+                android:textSize="15dp" />
+
             <TextView
                 android:id="@+id/time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="right"
                 android:text="time"
-                android:textSize="11dp"
-                android:gravity="right" />
+                android:textSize="11dp" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/notebody"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="text"
             android:textSize="13dp" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
